Fix styling and layout issues

--- a/src/components/feature-list.scss
+++ b/src/components/feature-list.scss
@@ -1,22 +1,47 @@
+@import "../variables";
+
 .feature-list {
   display: inline-flex;
   flex-direction: column;
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 0;
+    width: 100%;
+    border-radius: 0 0 4px 4px;
+
+    &__highlight {
+      &::after {
+        border-radius: 0 0 4px 4px;
+      }
+    }
+
+    @media (min-width: $bp-tablet) {
+      padding: 40px;
+      border-radius: 0 4px 40px 0;
+      
+      &__highlight {
+        &::after {
+          border-radius: 0 0 4px 0;
+        }
+      };
+    }
+  }
   
   &__item {
     width: 100%;
-    max-height: 256px;
-    height: 256px;
     display: inline-flex;
-    flex-direction: row;
-    box-shadow: 0 16px 40px rgba(61, 62, 70, 0.3), 0 4px 10px rgba(61, 62, 70, 0.1);
+    flex-direction: column;
+    margin-bottom: 40px;
     border-radius: 4px;
-    margin-bottom: 32px;
     cursor: pointer;
+    box-shadow: $shadow-soft;
     transition: transform .2s, box-shadow .2s;
 
     &:hover {
       transform: translateY(-1px);
-      box-shadow: 0 21px 53px rgba(61, 62, 70, 0.3), 0 5px 13px rgba(61, 62, 70, 0.1);
+      box-shadow: $shadow-soft-deep;
 
       .card__highlight {
         height: 10px;
@@ -25,57 +50,28 @@
 
     &:active {
       transform: translateY(-2px);
-      box-shadow: 0 10px 27px rgba(61, 62, 70, 0.3), 0 3px 12px rgba(61, 62, 70, 0.1);
+      box-shadow: $shadow-soft-shallow;
     }
     
-    .card {
-      width: calc(100% - 256px);
-      border-radius: 0 4px 4px 0;
-
-      &__highlight {
-        &::after {
-          border-radius: 0 0 4px 0;
-        }
-      }
+    @media (min-width: $bp-tablet) {
+      flex-direction: row;  
     }
   }
 
   &__image {
-    width: 256px;
+    width: 100%;
     height: 100%;
-    border-radius: 4px 0 0 4px;
+    max-height: 260px;
+    border-radius: 4px 4px 0 0;
     background-position: center;
     background-size: cover;
-  }
-  
-  @media (max-width: 768px) {
-    &__image {
-      width: calc(256px * 2 / 3);
-    }
+    object-fit: cover;
 
-    &__item .card {
-      width: calc(100% - (256px * 2 / 3));
-    }
-  }
-  
-  @media (max-width: 600px) {
-    flex-direction: column;
-    max-height: initial;
-    height: initial;
-  
-    &__image {
-      width: 100%;
-      height: 256px;
-      border-radius: 4px 4px 0 0;
-    }
-    
-    &__item .card {
-      width: 100%;
-      border-radius: 4px;
-
-      &__highlight::after {
-        border-radius: 0 0  4px 4px;
-      }
+    @media (min-width: $bp-tablet) {
+      max-height: none;
+      min-height: 260px;
+      width: 260px;
+      border-radius: 4px 0 0 4px;
     }
   }
 }
